feat: create model app from notebook file

--- a/notebooks/modelo_colesterol.ipynb
+++ b/notebooks/modelo_colesterol.ipynb
@@ -2729,7 +2729,8 @@
    "source": [
     "# teste de Lilliefors\n",
     "stat_ll, p_value_ll = lilliefors(residuos, dist=\"norm\", pvalmethod=\"table\")\n",
-    "print(\"Estatística do Teste: {:.6f} e P-Value: {:.6f}\".format(stat_ll, p_value_ll))\n",
+    "print(\n",
+    "    \"Estatística do Teste: {:.6f} e P-Value: {:.6f}\".format(stat_ll, p_value_ll))\n",
     "# resíduos segue uma distribuição normal - P-Value > 0.005"
    ]
   },
@@ -2928,13 +2929,6 @@
     "# salvar modelo\n",
     "joblib.dump(model_regr, \"../data/model_lr_multiple.plk\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
