config: install pylint and nbqa - apply lint

--- a/notebooks/app_gradio_colesterol.ipynb
+++ b/notebooks/app_gradio_colesterol.ipynb
@@ -23,10 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"importar módulos\"\"\"\n",
     "import gradio as gr\n",
     "import joblib\n",
     "import pandas as pd"
