--- a/notebooks/modelo_colesterol.ipynb
+++ b/notebooks/modelo_colesterol.ipynb
@@ -10,30 +10,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Lista de Importação de todos os módulos que serão utilizado no notebook\"\"\"\n",
+    "\n",
     "# AED\n",
     "import pandas as pd\n",
+    "\n",
+    "\n",
     "import seaborn as sns\n",
+    "\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
+    "\n",
     "# Model Trainning\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder, OrdinalEncoder\n",
+    "\n",
+    "\n",
     "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "\n",
     "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "\n",
     "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "\n",
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "\n",
+    "\n",
+    "\n",
     "# Model Validation\n",
+    "\n",
+    "\n",
     "from scipy.stats import zscore, shapiro, kstest, anderson\n",
+    "\n",
+    "\n",
     "from statsmodels.stats.diagnostic import lilliefors, het_goldfeldquandt\n",
+    "\n",
+    "\n",
     "import pingouin as pg\n",
     "\n",
+    "\n",
+    "\n",
     "# Model Prediction\n",
+    "\n",
+    "\n",
     "import joblib"
    ]
   },
@@ -1324,7 +1357,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1c761800c90>"
+       "<seaborn.axisgrid.PairGrid at 0x1eb3d6fcd10>"
       ]
      },
      "execution_count": 28,
@@ -2599,7 +2632,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1c761e29050>"
+       "<matplotlib.lines.Line2D at 0x1eb3e198e10>"
       ]
      },
      "execution_count": 54,
@@ -2694,7 +2727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2736,7 +2769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2818,7 +2851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2902,7 @@
        "1               O     Não                   Alto     40    70     180"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2890,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2899,7 +2932,7 @@
        "array([165.32375099])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2911,7 +2944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2920,7 +2953,7 @@
        "['../data/model_lr_multiple.plk']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
