--- a/notebooks/modelo_pontuacao.ipynb
+++ b/notebooks/modelo_pontuacao.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Módulo 7 - Regressão Linear Simples\n"
+    "# Módulo 7 - Regressão Linear Simples\n",
+    "\n"
    ]
   },
   {
@@ -13,15 +14,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Lista de Importação de todos os módulos que serão utilizado no notebook\"\"\"\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "\n",
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "\n",
     "from scipy.stats import shapiro, kstest, probplot, zscore\n",
     "import pandas as pd\n",
+    "\n",
     "import numpy as np\n",
+    "\n",
     "import seaborn as sns\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from statsmodels.graphics.gofplots import qqplot\n",
+    "\n",
     "import pingouin as pg"
    ]
   },
@@ -690,10 +703,8 @@
     "x_axis = range(len(Y_test))\n",
     "plt.figure(figsize=(10, 6))\n",
     "# reshape = transforma os dados num array unidimensional\n",
-    "sns.scatterplot(x=x_axis, y=Y_test.reshape(-1),\n",
-    "                color=\"blue\", label=\"Valores Reais\")\n",
-    "sns.scatterplot(x=x_axis, y=Y_pred.reshape(-1),\n",
-    "                color=\"red\", label=\"Valores Preditos\")\n",
+    "sns.scatterplot(x=x_axis, y=Y_test.reshape(-1), color=\"blue\", label=\"Valores Reais\")\n",
+    "sns.scatterplot(x=x_axis, y=Y_pred.reshape(-1), color=\"red\", label=\"Valores Preditos\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -874,8 +885,7 @@
     "# H1 - não segue distribuição normal\n",
     "# se p-valor > 0.05 não rejeita H0, caso contrário, rejeitamos:\n",
     "stat_ks, p_value_ks = kstest(residues.reshape(-1), \"norm\")\n",
-    "print(\n",
-    "    \"Estatística do teste: {:.4f} e p-value: {:.10f}\".format(stat_ks, p_value_ks))"
+    "print(\"Estatística do teste: {:.4f} e p-value: {:.10f}\".format(stat_ks, p_value_ks))"
    ]
   },
   {
