docs: update plus images

--- a/.github/docs/m8.md
+++ b/.github/docs/m8.md
@@ -20,9 +20,9 @@ Um laboratório de análises clínicas que conduz testes de colesterol, deseja a
   <img alt="" src="../assets/images/m8/m8_01.png" width="75%"/>
 </div>
 
-### Conceitos
+## Conceitos
 
-#### O que é **Bucketing**?
+### O que é **Bucketing**?
 
 Dentro do contexto de análise exploratória de dados, o termo "bucketing" refere-se à prática de agrupar valores em intervalos específicos, também conhecidos como "buckets" ou "bins". Esse processo é comumente utilizado para simplificar a análise de dados contínuos, tornando-a mais compreensível e interpretável.
 
@@ -32,7 +32,7 @@ Por exemplo, imagine que você tenha um conjunto de dados contendo idades de uma
 
 O bucketing é comumente usado em combinação com gráficos de histograma, que representam a distribuição de frequências dos dados em cada intervalo. Essa técnica é valiosa para simplificar dados complexos e destacar padrões que podem não ser imediatamente evidentes ao examinar os valores brutos.
 
-#### O que é Homocedasticidade?
+### O que é Homocedasticidade?
 
 A homocedasticidade é um conceito estatístico que se refere à constância da variabilidade dos erros em um modelo de regressão ao longo de todas as diferentes valores da variável independente. Em termos mais simples, a homocedasticidade implica que a dispersão dos resíduos (diferenças entre os valores observados e os valores preditos pelo modelo) é constante em todos os níveis da variável explicativa.
 
