feat: create notebook(polynomial regression) and aplly EDA

--- a/notebooks/modelo_pontuacao.ipynb
+++ b/notebooks/modelo_pontuacao.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Módulo 7 - Regressão Linear Simples\n",
-    "\n"
+    "# Módulo 7 - Regressão Linear Simples\n"
    ]
   },
   {
@@ -703,8 +702,10 @@
     "x_axis = range(len(Y_test))\n",
     "plt.figure(figsize=(10, 6))\n",
     "# reshape = transforma os dados num array unidimensional\n",
-    "sns.scatterplot(x=x_axis, y=Y_test.reshape(-1), color=\"blue\", label=\"Valores Reais\")\n",
-    "sns.scatterplot(x=x_axis, y=Y_pred.reshape(-1), color=\"red\", label=\"Valores Preditos\")\n",
+    "sns.scatterplot(x=x_axis, y=Y_test.reshape(-1),\n",
+    "                color=\"blue\", label=\"Valores Reais\")\n",
+    "sns.scatterplot(x=x_axis, y=Y_pred.reshape(-1),\n",
+    "                color=\"red\", label=\"Valores Preditos\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -885,7 +886,8 @@
     "# H1 - não segue distribuição normal\n",
     "# se p-valor > 0.05 não rejeita H0, caso contrário, rejeitamos:\n",
     "stat_ks, p_value_ks = kstest(residues.reshape(-1), \"norm\")\n",
-    "print(\"Estatística do teste: {:.4f} e p-value: {:.10f}\".format(stat_ks, p_value_ks))"
+    "print(\n",
+    "    \"Estatística do teste: {:.4f} e p-value: {:.10f}\".format(stat_ks, p_value_ks))"
    ]
   },
   {
