docs: update module 10 docs

--- a/.github/docs/m10.md
+++ b/.github/docs/m10.md
@@ -4,8 +4,74 @@
 
 > [voltar](./notes.md) para a página anterior
 
+## Sumário
+
+- [Módulo 10 - Classificação Árvore de Decisão](#módulo-10---classificação-árvore-de-decisão)
+  - [Sumário](#sumário)
+  - [Projeto](#projeto)
+    - [Etapas](#etapas)
+  - [Material](#material)
+  - [Conceitos](#conceitos)
+
 ## Projeto
+
+<div>
+  <img alt="descrição do projeto proposto para o módulo" src="../assets/images/m10/m10_10.png" width="75%"/>
+</div>
+
+### Etapas
+
+<div>
+  <img alt="esquema das etapas do projeto" src="../assets/images/m10/m10_11.png" width="75%"/>
+</div>
+
+## Material
+
+**Conceito:**
+<div>
+  <img alt="conceito árvore de decisão" src="../assets/images/m10/m10_01.png" width="75%"/>
+</div>
+
+**Resumo de alguns tipos de algoritimos de classificação (parte-1):**
+<div>
+  <img alt="Resumo de alguns tipos de algoritimos de classificação parte-1" src="../assets/images/m10/m10_02.png" width="75%"/>
+</div>
+
+**Resumo de alguns tipos de algoritimos de classificação:**
+<div>
+  <img alt="Resumo de alguns tipos de algoritimos de classificação" src="../assets/images/m10/m10_03.png" width="75%"/>
+</div>
+
+**Exemplos gráficos tipos de algoritimos de classificação (parte-1):**
+<div>
+  <img alt="Exemplos gráficos tipos de algoritimos de classificação (parte-1)" src="../assets/images/m10/m10_04.png" width="75%"/>
+</div>
+
+**Exemplos gráficos tipos de algoritimos de classificação (parte-2):**
+<div>
+  <img alt="Exemplos gráficos tipos de algoritimos de classificação (parte-2)" src="../assets/images/m10/m10_05.png" width="75%"/>
+</div>
+
+**Arvore de Decisão:**
+<div>
+  <img alt="" src="../assets/images/m10/m10_06.png" width="75%"/>
+</div>
+<div>
+  <img alt="" src="../assets/images/m10/m10_07.png" width="75%"/>
+</div>
+<div>
+  <img alt="" src="../assets/images/m10/m10_08.png" width="75%"/>
+</div>
+
+**Exemplo de Árvore de Decisão:**
+<div>
+  <img alt="" src="../assets/images/m10/m10_09.png" width="75%"/>
+</div>
+
+> [retornar](#módulo-10---classificação-árvore-de-decisão) ao topo da página
 
 ## Conceitos
 
+> [retornar](#módulo-10---classificação-árvore-de-decisão) ao topo da página
+>
 > [voltar](./notes.md) para a página anterior
